<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.kuali.kra</groupId>
	<artifactId>kc_project</artifactId>
	<packaging>war</packaging>
	<name>KCRA Project</name>
	<version>2.0</version>
	<url>http://kuali.org</url>
	
	<organization>
    <name>Kuali Coeus</name>
    <url> http://kra.testdrive.kuali.org/kra-ptd</url>
<!--<logo>https://test,kuali.org/kra-ptd/images-portal/logo-kra.gif</logo> -->
  	</organization>

	<developers>
	    <developer>
	      <id>td</id>
	      <name>Terry Durkin</name>
	      <email>td@kuali.org</email>
	      <!--<url>http://eric.propellors.net</url> -->
	      <organization>Kuali Coeus</organization>
	      <organizationUrl>http://kuali.org</organizationUrl>
	      <roles>
	        <role>DM</role>
	        <role>developer</role>
	      </roles>
	      <timezone>-5</timezone>
	      <!--<properties>
	        <picUrl>http://tinyurl.com/prv4t</picUrl>
	      </properties> -->
	    </developer>
	        <developer>
	          <id>bh</id>
	          <name>Brian Hutchinson</name>
	          <email>bh@kuali.org</email>
	          <!--<url>http://eric.propellors.net</url> -->
	          <organization>Kuali Coeus</organization>
	          <organizationUrl>http://kuali.org</organizationUrl>
	          <roles>
	            <role>DM</role>
	            <role>developer</role>
	          </roles>
	          <timezone>-5</timezone>
	          <!--<properties>
	            <picUrl>http://tinyurl.com/prv4t</picUrl>
	          </properties> -->
	        </developer>
	
	  </developers>
	
	<licenses>
	  <license>
	    <name>Kuali Coeus</name>
	    <url>https://test.kuali.org/licenses/LICENSE-1.0.txt</url>
	    <distribution>repo</distribution>
	    <comments>Kuali Coeus license</comments>
	  </license>
	</licenses>
	<issueManagement>
	    <system>Jira</system>
	    <url>https://test.kuali.org/jira/</url>
	  </issueManagement>
	
	<ciManagement>
	    <system>continuum</system>
	    <url>https://test.kuali.org/continuum</url>
	    <notifiers>
	      <notifier>
	        <type>mail</type>
	        <sendOnError>true</sendOnError>
	        <sendOnFailure>true</sendOnFailure>
	        <sendOnSuccess>true</sendOnSuccess>
	        <sendOnWarning>true</sendOnWarning>
	        <configuration><address>continuum@127.0.0.1</address></configuration>
	      </notifier>
	    </notifiers>
	  </ciManagement>
	  
	<properties>
        <servlet-api.version>2.4</servlet-api.version>
    </properties>
	
	
	<profiles>
		<profile>
			<id>war</id>
			<activation>
				<property>
					<name>war</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<resources>
					<resource>
						<filtering>true</filtering>
						<directory>${basedir}/src/main/resources</directory>
						<includes>
							<include>META-INF/kra-config.xml</include>
							<include>log4j.xml</include>
						</includes>
					</resource>
					<resource>
						<directory>${basedir}/src/main/resources</directory>
						<excludes>
							<exclude>kra-config.xml</exclude> 
						</excludes>
					</resource>
					<!-- 
					<resource>
						<filtering>true</filtering>
						<directory>${basedir}/src/main/resources</directory>
						<includes>
							<include>soap_server.properties</include>
						</includes>
					</resource>
					 -->
				</resources>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<source>1.5</source>
							<target>1.5</target>
						</configuration>
					</plugin>
					<plugin>
    					<artifactId>maven-resources-plugin</artifactId>
    					<version>2.2</version>
					</plugin>
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>javax.servlet</groupId>
					<artifactId>servlet-api</artifactId>
					<version>2.4</version>
					<scope>provided</scope>
				</dependency>
				<!--  maybe the cause for Jack's compiling error
				<dependency>
					<groupId>javax.servlet</groupId>
					<artifactId>servlet-api</artifactId>
					<version>2.3</version>
					<scope>provided</scope>
				</dependency>
				-->
				<dependency>
					<groupId>org.mortbay.jetty</groupId>
					<artifactId>jetty</artifactId>
					<version>6.1.1</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>tomcat</groupId>
					<artifactId>jasper-compiler</artifactId>
					<version>5.5.15</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>tomcat</groupId>
					<artifactId>jasper-runtime</artifactId>
					<version>5.5.15</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>tomcat</groupId>
					<artifactId>jasper-compiler-jdt</artifactId>
					<version>5.5.15</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.apache.activemq</groupId>
					<artifactId>activemq-core</artifactId>
					<version>4.1.1</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.apache.derby</groupId>
					<artifactId>derby</artifactId>
					<version>10.2.2.0</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.kuali.rice</groupId>
					<artifactId>rice-impl</artifactId>
					<version>1.1.0-SNAPSHOT</version>
					<exclusions>
						<exclusion>
							<groupId>junit</groupId>
							<artifactId>junit</artifactId>
						</exclusion>
						<exclusion>
							<groupId>htmlunit</groupId>
							<artifactId>htmlunit</artifactId>
						</exclusion>
						<exclusion>
							<groupId>jmock</groupId>
							<artifactId>jmock</artifactId>
						</exclusion>
						<exclusion>
							<groupId>nekohtml</groupId>
							<artifactId>nekohtml</artifactId>
						</exclusion>
						<exclusion>
							<groupId>org.apache.activemq</groupId>
							<artifactId>activemq-core</artifactId>
						</exclusion>
						<exclusion>
							<groupId>org.apache.derby</groupId>
							<artifactId>derby</artifactId>
						</exclusion>
						<exclusion>
							<groupId>org.springframework</groupId>
							<artifactId>spring-mock</artifactId>
						</exclusion>
						<exclusion>
							<groupId>itext</groupId>
							<artifactId>itext</artifactId>
						</exclusion>
						<exclusion>
							<groupId>com.oracle</groupId>
							<artifactId>ojdbc14</artifactId>
						</exclusion>
						<exclusion>
							<groupId>org.kuali.rice</groupId>
							<artifactId>rice-testharness</artifactId>
						</exclusion>
						<exclusion>
							<groupId>javax.resource</groupId>
							<artifactId>connector</artifactId>
						</exclusion>
						<exclusion>
							<groupId>xml-security</groupId>
							<artifactId>xmlsec</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
    				<groupId>org.apache.santuario</groupId>
    				<artifactId>xmlsec</artifactId>
    				<version>1.4.2</version>
    			</dependency>
				<dependency>
					<groupId>axis</groupId>
					<artifactId>axis</artifactId>
					<version>1.4</version>
				</dependency>
				<dependency>
					<groupId>fop</groupId>
					<artifactId>fop</artifactId>
					<version>0.20.5</version>
				</dependency>
				<dependency>
					<groupId>org.kuali.kra.s2s</groupId>
					<artifactId>gg_forms_jaxb</artifactId>
					<version>1.0.1</version>
				</dependency>
				<dependency>
					<groupId>org.kuali.kra.s2s</groupId>
					<artifactId>kra_s2s</artifactId>
					<version>1.0.14</version>
				</dependency>
				<dependency>
					<groupId>org.kuali.kra.s2s</groupId>
					<artifactId>propdev-schema-v2</artifactId>
					<version>1.2</version>
 				</dependency>  
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>hyperjaxb</artifactId>
					<version>1.0</version>
				</dependency>
				<!-- 
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>jaxb-impl</artifactId>
					<version>1.0.4</version>
				</dependency>
				-->
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>jaxb-libs</artifactId>
					<version>1.0.4</version>
				</dependency>
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>jaxb-verification</artifactId>
					<version>1.0.4</version>
				</dependency>
				<!--
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>jaxb-xjc</artifactId>
					<version>1.0.4</version>
				</dependency>
				-->
				<dependency>
					<groupId>jaxrpc</groupId>
					<artifactId>jaxrpc</artifactId>
					<version>1.1.3</version>
				</dependency>
				<dependency>
					<groupId>relaxng</groupId>
					<artifactId>relaxngDatatype</artifactId>
					<version>0.0.1</version>
				</dependency>
				<dependency>
					<groupId>soap</groupId>
					<artifactId>soap</artifactId>
					<version>1.1</version>
 				</dependency>
 				<dependency>
					<groupId>jax-qname</groupId>
					<artifactId>jax-qname</artifactId>
					<version>1.1</version>
				</dependency>
				<dependency>
 					<groupId>jaxrpc</groupId>
 					<artifactId>jaxrpc</artifactId>
 					<version>1.1.3</version>
 				</dependency>
 				<dependency>
					<groupId>namespace</groupId>
					<artifactId>namespace</artifactId>
					<version>1.0.1</version>
				</dependency>
				<dependency>
					<groupId>xsdlib</groupId>
					<artifactId>xsdlib</artifactId>
					<version>1.0</version>
				</dependency>
				<dependency>
					<groupId>avalon-framework</groupId>
					<artifactId>avalon-framework</artifactId>
					<version>4.1.2</version>
				</dependency>
				<dependency>
					<groupId>batik</groupId>
					<artifactId>batik</artifactId>
					<version>1.0</version>
				</dependency>
				<dependency>
					<groupId>com.lowagie</groupId>
					<artifactId>iText</artifactId>
					<version>2.1.2</version>
				</dependency>
				<dependency>
  					<groupId>org.jmock</groupId>
  					<artifactId>jmock-junit4</artifactId>
  					<version>2.5.0</version>
  					<scope>test</scope>
				</dependency>
				<dependency>
                    <groupId>atomikos</groupId>
                    <artifactId>transactions</artifactId>
                    <version>3.2.1</version>
                </dependency>
			</dependencies>
		</profile>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<!-- 
				<resources>
					<resource>
						<filtering>true</filtering>
						<directory>${basedir}/src/main/resources</directory>
						<includes>
							<include>soap_server.properties</include>
						</includes>
					</resource>
				</resources>
				 -->
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<source>1.5</source>
							<target>1.5</target>
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.3.1</version>
						<configuration>
							<useFile>false</useFile>
							<testFailureIgnore>false</testFailureIgnore>
							<includes>
								<include>**/*Test.java</include>
							</includes>
 							<excludes><exclude></exclude></excludes>
							<forkMode>once</forkMode>
							<reportFormat>plain</reportFormat>
							<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
						</configuration>
					</plugin>
					<plugin>
    					<artifactId>maven-resources-plugin</artifactId>
    					<version>2.2</version>
					</plugin>
					<!-- 
					<plugin>
        				<groupId>org.codehaus.mojo</groupId>
        				<artifactId>cobertura-maven-plugin</artifactId>
					</plugin>
					 -->
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>org.kuali.rice</groupId>
					<artifactId>rice-kns</artifactId>
					<version>1.1.0-SNAPSHOT</version>
					<exclusions>
						<exclusion>
							<groupId>itext</groupId>
							<artifactId>itext</artifactId>
						</exclusion>
						<exclusion>
							<groupId>xml-security</groupId>
							<artifactId>xmlsec</artifactId>
						</exclusion>
						<exclusion>
							<groupId>javax.servlet</groupId>
							<artifactId>servlet-api</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>javax.servlet</groupId>
					<artifactId>servlet-api</artifactId>
					<version>2.4</version>
				</dependency>
				<dependency>
    				<groupId>org.apache.santuario</groupId>
    				<artifactId>xmlsec</artifactId>
    				<version>1.4.2</version>
    			</dependency>
				<dependency>
					<groupId>htmlunit</groupId>
					<artifactId>htmlunit</artifactId>
					<version>1.13</version>
					<exclusions>
						<exclusion>
							<artifactId>servlet-api</artifactId>
							<groupId>javax.servlet</groupId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>axis</groupId>
					<artifactId>axis</artifactId>
					<version>1.4</version>
				</dependency>
				<dependency>
					<groupId>fop</groupId>
					<artifactId>fop</artifactId>
					<version>0.20.5</version>
				</dependency>
				<dependency>
					<groupId>org.kuali.kra.s2s</groupId>
					<artifactId>gg_forms_jaxb</artifactId>
					<version>1.0.1</version>
				</dependency>
				<dependency>
					<groupId>org.kuali.kra.s2s</groupId>
					<artifactId>kra_s2s</artifactId>
					<version>1.0.14</version>
				</dependency>
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>hyperjaxb</artifactId>
					<version>1.0</version>
				</dependency>
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>jaxb-impl</artifactId>
					<version>1.0.4</version>
				</dependency>
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>jaxb-libs</artifactId>
					<version>1.0.4</version>
				</dependency>
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>jaxb-verification</artifactId>
					<version>1.0.4</version>
				</dependency>
				<!--
				<dependency>
					<groupId>jaxb</groupId>
					<artifactId>jaxb-xjc</artifactId>
					<version>1.0.4</version>
				</dependency>
				-->
				<dependency>
					<groupId>jaxrpc</groupId>
					<artifactId>jaxrpc</artifactId>
					<version>1.1.3</version>
				</dependency>
				<dependency>
					<groupId>relaxng</groupId>
					<artifactId>relaxngDatatype</artifactId>
					<version>0.0.1</version>
				</dependency>
				<dependency>
					<groupId>soap</groupId>
					<artifactId>soap</artifactId>
					<version>1.1</version>
				</dependency>
				<dependency>
					<groupId>org.kuali.kra.s2s</groupId>
					<artifactId>propdev-schema-v2</artifactId>
					<version>1.2</version>
 				</dependency>
 				<dependency>
					<groupId>jax-qname</groupId>
					<artifactId>jax-qname</artifactId>
					<version>1.1</version>
				</dependency>
				<dependency>
 					<groupId>jaxrpc</groupId>
 					<artifactId>jaxrpc</artifactId>
 					<version>1.1.3</version>
 				</dependency>
 				<dependency>
					<groupId>namespace</groupId>
					<artifactId>namespace</artifactId>
					<version>1.0.1</version>
				</dependency>
				<dependency>
					<groupId>xsdlib</groupId>
					<artifactId>xsdlib</artifactId>
					<version>1.0</version>
				</dependency>
				<dependency>
					<groupId>avalon-framework</groupId>
					<artifactId>avalon-framework</artifactId>
					<version>4.1.2</version>
				</dependency>
				<dependency>
					<groupId>batik</groupId>
					<artifactId>batik</artifactId>
					<version>1.0</version>
				</dependency>
				<dependency>
					<groupId>com.lowagie</groupId>
					<artifactId>iText</artifactId>
					<version>2.1.2</version>
				</dependency>
				<dependency>
  					<groupId>org.jmock</groupId>
  					<artifactId>jmock-junit4</artifactId>
  					<version>2.5.0</version>
  					<scope>test</scope>
				</dependency>
				<dependency>
  					<groupId>jmock</groupId>
  					<artifactId>jmock</artifactId>
  					<version>1.0.1</version>
  					<scope>test</scope>
				</dependency>
				<dependency>
  					<groupId>org.jmock</groupId>
  					<artifactId>jmock-legacy</artifactId>
  					<version>2.5.0</version>
  					<scope>test</scope>
				</dependency>
				<dependency>
  					<groupId>org.objenesis</groupId>
  					<artifactId>objenesis</artifactId>
  					<version>1.0</version>
  					<scope>test</scope>
				</dependency>				
				<dependency>
                    <groupId>atomikos</groupId>
                    <artifactId>transactions</artifactId>
                    <version>3.2.1</version>
                </dependency>
			</dependencies>
		</profile>
		
                <profile>
                        <id>siteDeploy</id>
                        <activation>
                                <activeByDefault>false</activeByDefault>
                        </activation>
                        <build>
                                <plugins>
                                        <plugin>
                                                <artifactId>maven-surefire-plugin</artifactId>
                                                <version>2.3.1</version>
                                                <configuration>
                                                        <useFile>false</useFile>
                                                        <testFailureIgnore>true</testFailureIgnore>
                                                        <includes>
                                                                <include>**/*Test.java</include>
                                                        </includes>
                                                        <excludes><exclude></exclude></excludes>
                                                        <forkMode>once</forkMode>
                                                        <reportFormat>plain</reportFormat>
                                                        <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
                                                </configuration>
                                        </plugin>
                                  </plugins>
                           </build>
               </profile>
 		
	</profiles>
	<repositories>
		<repository>
			<id>kuali</id>
			<name>Kuali Repository</name>
			<url>https://test.kuali.org/maven</url>
			<snapshots><enabled>true</enabled></snapshots>
		</repository>
		<repository>
			<id>codehaus</id>
			<name>Codehaus</name>
			<url>http://dist.codehaus.org</url>
		</repository>
		<repository>
			<id>apache</id>
			<name>apache</name>
			<url>http://people.apache.org/repo/m2-ibiblio-rsync-repository</url>
		</repository>
	</repositories>
	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-report-plugin</artifactId>
			</plugin>
			<!-- 
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
        		<artifactId>cobertura-maven-plugin</artifactId>
        	</plugin>
        	 -->
	      <plugin>
	        <groupId>net.sourceforge.maven-taglib</groupId>
	        <artifactId>maven-taglib-plugin</artifactId>
	      </plugin>
			<plugin> 
				<groupId>org.apache.maven.plugins</groupId> 
				<artifactId>maven-javadoc-plugin</artifactId>
				 <version>2.4</version>
			 </plugin> 
		</plugins>
	</reporting>
	<scm>
    	<connection>scm:svn:https://test.kuali.org/svn/kc_project/trunk</connection>
    	<developerConnection>scm:svn:https://test.kuali.org/svn/kc_project/trunk</developerConnection>
    	<tag>HEAD</tag>
    	<url>https://test.kuali.org/fisheye/browse/kc_project</url>
  	</scm>
  	
	<distributionManagement>
	  <site>
	    <id>wsa131</id>
	    <name>CI and Site deployment Server</name>
	    <!--<url>scp://wsa129.uits.indiana.edu/tmp/site</url>-->
	    <url>file:///opt/kra/2.0</url>
	  </site>
	</distributionManagement>
  	
</project>
